[tool.black]
line-length = 119

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tooltube"
description = "Herramienta para actualizar procesos de YouTube"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "ChepeCarlos", email = "chepecarlos@chepecarlos.com" }]
license = { file = "LICENSE" }
dynamic = ["version", "dependencies"]

[project.urls]
Homepage = "https://github.com/chepecarlos/tooltube"
Documentation = "https://github.com/chepecarlos/tooltube"
Source = "https://github.com/chepecarlos/tooltube"
Tracker = "https://github.com/chepecarlos/tooltube/issues"

[project.scripts]
tooltube = "tooltube.tooltube:main"
tooltube_analisis = "tooltube.tooltube_analisis:main"
tooltube_get = "tooltube.tooltube_get:main"
tooltube_gui = "tooltube.tooltube_gui:main"
tooltube_install_assets = "tooltube.install_assets:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "testing*"]

[tool.setuptools.dynamic]
version = { file = ["VERSION"] }
dependencies = { file = ["requirements.txt"] }
